# analysis

./: ai_data_preparation.py  ai_data_preparation_clean.py  analyze_excel_backup.txt  app.py  create_backup.py  data_utils.py  data_utils_backup.txt  drag_drop_config.py  drag_drop_ui.py  excel_analyzer.py  excel_test.py  gemini_utils.py  ml_utils.py  pyproject.toml  report_generator.py  stats_utils.py  test_all_systems.py  test_master_analysis.py  verify_file.py  visualization_utils.py  web_data_utils.py
attached_assets/: 2025-05-09T15-49_export.csv  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-title-Excel-Drag-Drop-Conf-1746794068992.txt  Pasted-Certainly-Here-s-a-detailed-explanation-of-the-input-requirements-for-common-statistical-tests--1746902114633.txt  Pasted-Data-Information-Shape-90-rows-29-columns-class-pandas-core-frame-DataFrame-RangeIndex-90--1746808802340.txt  Pasted-Project-Goal-Enable-users-to-obtain-an-AI-generated-narrative-summary-of-their-statistical-analyses-1749062671858.txt  Pasted-ValueError-Duplicate-column-names-found-SN-System-Age-years-Age-Group-Age-Group--1746800107893.txt  Pasted-ValueError-Styles-supplied-as-string-must-follow-CSS-rule-formats-for-example-attr-val-Amicu-1746804841371.txt  Set 14 August.xlsx  all_systems_test.xlsx  content-1746820181367.md  overall_master.xlsx
dnd_component/: __init__.py
dnd_component/frontend/: index.html  main.js  package-lock.json  package.json  style.css
project_backup/: app.py  drag_drop_ui.py  ml_utils.py  stats_utils.py  visualization_utils.py
